<resources>
    <string name="app_name">智能电视控制镜像</string>

    <string name="notice">请选择连接设备，选择连接设备才可播放</string>
    <string name="file_button">选择文件</string>
    <string name="selectedText">已选中: %s</string>
    <string name="progress">进度</string>
    <string name="volume">音量</string>
    <string name="mute">静音</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>

    <string name="chooser_title">Lorem ipsum</string>
    <string name="internal_storage">Internal storage</string>
</resources>
