<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.zane.androidupnpdemo.ui.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ListView
            android:id="@+id/lv_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/file_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="@dimen/listview_items_padding_gp_top"
        android:paddingBottom="@dimen/listview_items_padding_gp_top"
        android:text="@string/file_button"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/listview_items_padding_gp_top"
        android:paddingBottom="@dimen/listview_items_padding_gp_top"
        android:text="@string/notice"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/text_size_large" />

    <Switch
        android:id="@+id/sw_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute"
        android:textColor="@color/textNormalColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textColor="@color/textNormalColor" />

        <SeekBar
            android:id="@+id/seekbar_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="@color/textNormalColor" />

        <SeekBar
            android:id="@+id/seekbar_volume"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/play" />

        <Button
            android:id="@+id/bt_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/pause" />

        <Button
            android:id="@+id/bt_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/stop" />


    </LinearLayout>

</LinearLayout>
